feat: support localIdentifier on filters
risk: low
JIRA: F1-844
